# bn256

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.cmake.in
.github/workflows/: actions.yml
include/: bn256.h  span.h
include/bn256/: bn256.h  span.h
src/: CMakeLists.txt  array.h  bitint_arithmetic.h  bitlen.cpp  bitlen.h  bn256.cpp  bn256.h  constants.h  curve.cpp  curve.h  gfp.cpp  gfp.h  gfp12.cpp  gfp12.h  gfp2.cpp  gfp2.h  gfp6.cpp  gfp6.h  gfp_amd64.cpp  gfp_amd64.h  gfp_amd64.s  gfp_generic.cpp  gfp_generic.h  gfp_mul_amd64.cpp  gfp_mul_amd64.s  gfp_native.h  gfp_test.cpp  int512.h  lattice.cpp  lattice.h  lattice_test.cpp  mul_u256_bmi2.cpp  mul_u256_nonconstexpr.cpp  optate.cpp  optate.h  random_255.cpp  random_255.h  random_256.cpp  random_256.h  random_int256.cpp  (+3 more)
test/: CMakeLists.txt  bn256_benchmark.cpp  bn256_test.cpp  example_test.cpp  gfp_test.cpp  lattice_test.cpp  main_test.cpp
